[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure_integrator"
version = "0.0.1"
authors = [
  { name="Moustache Data Mateusz Wasalski", email="m.wasalski@gmail.com" },
]
description = "Library to work with Azure with Python"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mwasalski/azure_integrator"
Issues = "m.wasalski@gmail.com or linkedin.com/in/mateus-wasalski"